# climateIQ

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  repository.yaml
backend/: config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: __init__.py  dependencies.py  main.py  middleware.py  websocket.py
backend/api/routes/: __init__.py  analytics.py  backup.py  chat.py  devices.py  schedule.py  sensors.py  settings.py  system.py  weather.py  zones.py
backend/core/: __init__.py  climate_advisor.py  decision_engine.py  pattern_engine.py  pid_controller.py  rule_engine.py  scheduler.py  seasonal_lock.py  temp_compensation.py  zone_analytics.py  zone_manager.py
backend/integrations/: __init__.py  ha_client.py  ha_websocket.py  mqtt_client.py  weather_service.py
backend/integrations/llm/: __init__.py  cost_tracker.py  model_discovery.py  prompts.py  provider.py  tools.py
backend/migrations/: alembic.ini  env.py  script.py.mako
backend/migrations/versions/: 001_initial_schema.py  002_perf_indexes.py  003_memory_embeddings.py
backend/models/: __init__.py  database.py  enums.py  schemas.py
backend/services/: __init__.py  backup_service.py  notification_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_device_routes.py  test_schedule_routes.py  test_sensor_routes.py  test_system_routes.py  test_zone_routes.py
backend/tests/unit/: test_backup_service.py  test_decision_engine.py  test_ha_websocket.py  test_middleware.py  test_notification_service.py  test_pattern_engine.py  test_pid_controller.py  test_rule_engine.py  (+4 more)
(+66 files in other folders)
