[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climateiq-backend"
version = "0.4.10"
description = "ClimateIQ backend service"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "ClimateIQ", email = "engineering@climateiq.local" },
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "litellm>=1.42",
    "apscheduler>=3.11",
    "anthropic>=0.40",
    "openai>=1.58",
    "google-generativeai>=0.8",
    "pgvector>=0.3.6",
    "aiohttp>=3.11",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.18",
    "email-validator>=2.2",
    "python-dateutil>=2.9",
    "pytz>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "S", "C4", "TID", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "D103"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
strict_optional = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra --strict-markers --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
